working prototype of pagination on a bookmark endpoint
